{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 43,
  "lineage": "bc4c80a6-cccd-817e-2c04-e86c266cad65",
  "resources": [
    {
      "module": "module.ec2_agent",
      "mode": "managed",
      "type": "aws_instance",
      "name": "agent",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0141514361b6a3c1b",
            "arn": "arn:aws:ec2:eu-west-1:672574731473:instance/i-09328f3051f4e9f0f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "beest-stac-16209-otel-cu-otel-instance-profile",
            "id": "i-09328f3051f4e9f0f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "beest-stac-16209-otel-cu-otel-agent-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07aecf16c179a2855",
            "private_dns": "ip-10-11-1-99.eu-west-1.compute.internal",
            "private_ip": "10.11.1.99",
            "public_dns": "ec2-54-194-38-43.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.194.38.43",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:eu-west-1:672574731473:key/650600ea-3b3b-4aa0-adf0-2d9dfd8cb87a",
                "throughput": 0,
                "volume_id": "vol-0266066c8387d4824",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ae2a4f542e40ae84",
            "tags": {
              "Environment": "beest-stac-16209-otel-cu-otel",
              "Name": "beest-stac-16209-otel-cu-otel-agent",
              "VantaContainsUserData": "false",
              "VantaDescription": "Machine used used in acceptance pipeline",
              "VantaNonProd": "true",
              "VantaOwner": "beest@stackstate.com",
              "VantaUserDataStored": "NA"
            },
            "tags_all": {
              "Environment": "beest-stac-16209-otel-cu-otel",
              "Name": "beest-stac-16209-otel-cu-otel-agent",
              "VantaContainsUserData": "false",
              "VantaDescription": "Machine used used in acceptance pipeline",
              "VantaNonProd": "true",
              "VantaOwner": "beest@stackstate.com",
              "VantaUserDataStored": "NA"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0339f2c5d5122413b"
            ]
          },
          "dependencies": [
            "module.aws_stackpack_role.aws_iam_instance_profile.integrations_profile",
            "module.aws_stackpack_role.aws_iam_role.agent_ec2_role",
            "module.ec2_agent.aws_key_pair.agent_key_pair",
            "module.ec2_agent.aws_security_group.agent_group",
            "module.ec2_agent.data.aws_ami.ubuntu_ami",
            "module.ec2_agent.tls_private_key.rsa_key",
            "module.vpc.aws_subnet.eks_private",
            "module.vpc.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_agent",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "agent_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:672574731473:security-group/sg-0339f2c5d5122413b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0339f2c5d5122413b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ping",
                "from_port": 8,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "beest-stac-16209-otel-cu-otel-agent-sg",
            "name_prefix": "",
            "owner_id": "672574731473",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "beest-stac-16209-otel-cu-otel"
            },
            "tags_all": {
              "Environment": "beest-stac-16209-otel-cu-otel"
            },
            "timeouts": null,
            "vpc_id": "vpc-095cb080c3d70efa2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:672574731473:internet-gateway/igw-096f75df28055eb41",
            "id": "igw-096f75df28055eb41",
            "owner_id": "672574731473",
            "tags": {
              "Environment": "beest-stac-16209-otel-cu-otel",
              "Name": "beest-stac-16209-otel-cu-otel-igw"
            },
            "tags_all": {
              "Environment": "beest-stac-16209-otel-cu-otel",
              "Name": "beest-stac-16209-otel-cu-otel-igw"
            },
            "vpc_id": "vpc-095cb080c3d70efa2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connectivity_type": "private",
            "id": "nat-0a8b18ec9eb693620",
            "network_interface_id": "eni-05b7ae4cada85ade6",
            "private_ip": "10.11.0.196",
            "subnet_id": "subnet-0ecddb258618a01a5",
            "tags": {
              "Environment": "beest-stac-16209-otel-cu-otel",
              "Name": "beest-stac-16209-otel-cu-otel-nat-gw-1"
            },
            "tags_all": {
              "Environment": "beest-stac-16209-otel-cu-otel",
              "Name": "beest-stac-16209-otel-cu-otel-nat-gw-1"
            }
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.eks_public",
            "module.vpc.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "connectivity_type": "private",
            "id": "nat-0132baee0514e36c4",
            "network_interface_id": "eni-0ca2cd77b872a66a1",
            "private_ip": "10.11.2.184",
            "subnet_id": "subnet-0d4ae49f787321333",
            "tags": {
              "Environment": "beest-stac-16209-otel-cu-otel",
              "Name": "beest-stac-16209-otel-cu-otel-nat-gw-2"
            },
            "tags_all": {
              "Environment": "beest-stac-16209-otel-cu-otel",
              "Name": "beest-stac-16209-otel-cu-otel-nat-gw-2"
            }
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_subnet.eks_public_2",
            "module.vpc.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:672574731473:route-table/rtb-0c59352da2ada60a0",
            "id": "rtb-0c59352da2ada60a0",
            "owner_id": "672574731473",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-096f75df28055eb41",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "beest-stac-16209-otel-cu-otel",
              "Name": "beest-stac-16209-otel-cu-otel-eks-public"
            },
            "tags_all": {
              "Environment": "beest-stac-16209-otel-cu-otel",
              "Name": "beest-stac-16209-otel-cu-otel-eks-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-095cb080c3d70efa2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:672574731473:route-table/rtb-09f7aa0f60dbdbc14",
            "id": "rtb-09f7aa0f60dbdbc14",
            "owner_id": "672574731473",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-096f75df28055eb41",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "beest-stac-16209-otel-cu-otel",
              "Name": "beest-stac-16209-otel-cu-otel-eks-public-2"
            },
            "tags_all": {
              "Environment": "beest-stac-16209-otel-cu-otel",
              "Name": "beest-stac-16209-otel-cu-otel-eks-public-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-095cb080c3d70efa2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:672574731473:route-table/rtb-04ef8572058ab2934",
            "id": "rtb-04ef8572058ab2934",
            "owner_id": "672574731473",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-096f75df28055eb41",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "beest-stac-16209-otel-cu-otel",
              "Name": "beest-stac-16209-otel-cu-otel-private-route-table"
            },
            "tags_all": {
              "Environment": "beest-stac-16209-otel-cu-otel",
              "Name": "beest-stac-16209-otel-cu-otel-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-095cb080c3d70efa2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:672574731473:route-table/rtb-0129e0b5f16c12d1c",
            "id": "rtb-0129e0b5f16c12d1c",
            "owner_id": "672574731473",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-096f75df28055eb41",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "beest-stac-16209-otel-cu-otel",
              "Name": "beest-stac-16209-otel-cu-otel-private-route-table-2"
            },
            "tags_all": {
              "Environment": "beest-stac-16209-otel-cu-otel",
              "Name": "beest-stac-16209-otel-cu-otel-private-route-table-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-095cb080c3d70efa2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks-private-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d74ab3eefc9c45fa",
            "route_table_id": "rtb-0129e0b5f16c12d1c",
            "subnet_id": "subnet-007aab725cb3d3dc6"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.private_route_table_2",
            "module.vpc.aws_subnet.eks_private_2",
            "module.vpc.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b094b08e434450ab",
            "route_table_id": "rtb-04ef8572058ab2934",
            "subnet_id": "subnet-0ae2a4f542e40ae84"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.private_route_table",
            "module.vpc.aws_subnet.eks_private",
            "module.vpc.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b70acbb2cdafdfc",
            "route_table_id": "rtb-0c59352da2ada60a0",
            "subnet_id": "subnet-0ecddb258618a01a5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.eks_public",
            "module.vpc.aws_subnet.eks_public",
            "module.vpc.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eks_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0002a7f07468126f9",
            "route_table_id": "rtb-09f7aa0f60dbdbc14",
            "subnet_id": "subnet-0d4ae49f787321333"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.eks_public_2",
            "module.vpc.aws_subnet.eks_public_2",
            "module.vpc.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:672574731473:subnet/subnet-0ae2a4f542e40ae84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.11.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ae2a4f542e40ae84",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "672574731473",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "beest-stac-16209-otel-cu-otel",
              "Name": "beest-stac-16209-otel-cu-otel-eks-private",
              "kubernetes.io/cluster/beest-stac-16209-otel-cu-otel-cluster": "shared"
            },
            "tags_all": {
              "Environment": "beest-stac-16209-otel-cu-otel",
              "Name": "beest-stac-16209-otel-cu-otel-eks-private",
              "kubernetes.io/cluster/beest-stac-16209-otel-cu-otel-cluster": "shared"
            },
            "vpc_id": "vpc-095cb080c3d70efa2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:672574731473:subnet/subnet-007aab725cb3d3dc6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.11.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007aab725cb3d3dc6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "672574731473",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "beest-stac-16209-otel-cu-otel",
              "Name": "beest-stac-16209-otel-cu-otel-eks-private-2",
              "kubernetes.io/cluster/beest-stac-16209-otel-cu-otel-cluster": "shared"
            },
            "tags_all": {
              "Environment": "beest-stac-16209-otel-cu-otel",
              "Name": "beest-stac-16209-otel-cu-otel-eks-private-2",
              "kubernetes.io/cluster/beest-stac-16209-otel-cu-otel-cluster": "shared"
            },
            "vpc_id": "vpc-095cb080c3d70efa2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:672574731473:subnet/subnet-0ecddb258618a01a5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.11.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ecddb258618a01a5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "672574731473",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "beest-stac-16209-otel-cu-otel",
              "Name": "beest-stac-16209-otel-cu-otel-eks-public",
              "kubernetes.io/cluster/beest-stac-16209-otel-cu-otel-cluster": "shared"
            },
            "tags_all": {
              "Environment": "beest-stac-16209-otel-cu-otel",
              "Name": "beest-stac-16209-otel-cu-otel-eks-public",
              "kubernetes.io/cluster/beest-stac-16209-otel-cu-otel-cluster": "shared"
            },
            "vpc_id": "vpc-095cb080c3d70efa2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eks_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:672574731473:subnet/subnet-0d4ae49f787321333",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.11.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4ae49f787321333",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "672574731473",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "beest-stac-16209-otel-cu-otel",
              "Name": "beest-stac-16209-otel-cu-otel-eks-public-2",
              "kubernetes.io/cluster/beest-stac-16209-otel-cu-otel-cluster": "shared"
            },
            "tags_all": {
              "Environment": "beest-stac-16209-otel-cu-otel",
              "Name": "beest-stac-16209-otel-cu-otel-eks-public-2",
              "kubernetes.io/cluster/beest-stac-16209-otel-cu-otel-cluster": "shared"
            },
            "vpc_id": "vpc-095cb080c3d70efa2"
          },
          "dependencies": [
            "module.vpc.aws_vpc.cluster"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:672574731473:vpc/vpc-095cb080c3d70efa2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.11.0.0/16",
            "default_network_acl_id": "acl-0ed29e4dee09d4bae",
            "default_route_table_id": "rtb-0abff50f8071d61b7",
            "default_security_group_id": "sg-00b6337bdd2cf1fff",
            "dhcp_options_id": "dopt-4a0d822c",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-095cb080c3d70efa2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0abff50f8071d61b7",
            "owner_id": "672574731473",
            "tags": {
              "Environment": "beest-stac-16209-otel-cu-otel",
              "Name": "beest-stac-16209-otel-cu-otel-eks-vpc",
              "kubernetes.io/cluster/beest-stac-16209-otel-cu-otel-cluster": "shared"
            },
            "tags_all": {
              "Environment": "beest-stac-16209-otel-cu-otel",
              "Name": "beest-stac-16209-otel-cu-otel-eks-vpc",
              "kubernetes.io/cluster/beest-stac-16209-otel-cu-otel-cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}